--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                <div class="port-info">
                   <h4>React y Tailwind CSS</h4>
                   <p>Control de Citas</p>
-                  <a href="Proyectos para portafolio/citas-react/index.html" target="_blank"><i class="fa-solid fa-up-right-from-square" ></i></a>
+                  <a href="##" ><i class="fa-solid fa-up-right-from-square" ></i></a>
                </div>
             </div>
 
@@ -489,7 +489,7 @@
             <div class="port-info">
                <h4>React JS y Style Components</h4>
                <p>Cotizador de criptomonedas.</p>
-               <a href="Proyectos para portafolio/criptos-react/index.html"target="_blank"><i class="fa-solid fa-up-right-from-square" ></i></a>
+               <a href="##"><i class="fa-solid fa-up-right-from-square" ></i></a>
             </div>
          </div>
 
