--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
                <div class="skill-info">
                   <h2>React</h2>
-                  <h2>10%</h2>
+                  <h2>40%</h2>
                </div>
    
                <div class="skill-outter-line">
@@ -233,7 +233,7 @@
                   <ul>
                      <li>Experiencia en HTML y CSS3, Flexbox, Formularios y tablas, Layouts Responsivos.</li>
                      <li>JavaScript CRUD, Manupulcaion del DOM, Validación de formularios, Orientación a objetos.</li>
-                     <li>Libreria React en curso actualmente (MAYO 2023) Navegacion en una SPA.</li>
+                     <li>Libreria React en curso actualmente  Navegacion en una SPA.</li>
                   </ul>
                </div> 
 
