--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <section id="home">
          <div class="home-row">
             <h1>Hi, this is <br>Gabriel<span>.</span></h1>
-            <p>I' am <span class="auto-input"></span> </p>
+            <p>I'm <span class="auto-input"></span> </p>
          </div>
       </section>
 
